welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ')' expected but ';' found.
while (2 * biscuits != caseOrange + 1;)
                                     ^RunHalf:6: error: illegal start of statement
while (2 * biscuits != caseOrange + 1;)
                                      ^